--- a/config/levante/catalog/ICON/ngc2009.yaml
+++ b/config/levante/catalog/ICON/ngc2009.yaml
@@ -19,21 +19,21 @@ sources:
     args:
       consolidated: True
       urlpath: /work/bb1153/m300827/ngc2009/R02B08/2d_ml.zarr
-  atm_2d_ml_R02B06:
-    driver: zarr
-    args:
-      consolidated: True
-      urlpath: https://swift.dkrz.de/v1/dkrz_a973e394-5f24-4f4d-8bbf-1a83bd387ccb/ngc2009/R02B06/2d_ml_v4.zarr/
-  oce_200m_atmgrid:
-    driver: zarr
-    args:
-      consolidated: True
-      urlpath: /work/bb1153/m300827/ngc2009/R02B09/oce_0-200m_3h_inst_1.zarr
-  oce_200m_atmgrid_R02B09:
-    driver: zarr
-    args:
-      consolidated: True
-      urlpath: /work/bb1153/m300827/ngc2009/R02B09/oce_0-200m_3h_inst_1.zarr
+  # atm_2d_ml_R02B06:
+  #   driver: zarr
+  #   args:
+  #     consolidated: True
+  #     urlpath: https://swift.dkrz.de/v1/dkrz_a973e394-5f24-4f4d-8bbf-1a83bd387ccb/ngc2009/R02B06/2d_ml_v4.zarr/
+  # oce_200m_atmgrid:
+  #   driver: zarr
+  #   args:
+  #     consolidated: True
+  #     urlpath: /work/bb1153/m300827/ngc2009/R02B09/oce_0-200m_3h_inst_1.zarr
+  # oce_200m_atmgrid_R02B09:
+  #   driver: zarr
+  #   args:
+  #     consolidated: True
+  #     urlpath: /work/bb1153/m300827/ngc2009/R02B09/oce_0-200m_3h_inst_1.zarr
   intake-esm-test:
       driver: intake_esm.esm_datastore
       args:
