--- a/config/levante/catalog/IFS/tco3999-ng5.yaml
+++ b/config/levante/catalog/IFS/tco3999-ng5.yaml
@@ -64,11 +64,11 @@ sources:
       combine: nested
       urlpath: 
       - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/ci/netcdf/tco3999-ng5_sp.json
-  lra-r100-day:
-    driver: netcdf
-    args:
-      urlpath: '/work/bb1153/b382076/LRA/tco3999-ng5/r100/day/*.nc'
-      chunks: {}
+  # lra-r100-day:
+  #   driver: netcdf
+  #   args:
+  #     urlpath: '/work/bb1153/b382076/LRA/tco3999-ng5/r100/day/*.nc'
+  #     chunks: {}
   lra-r100-mon:
     driver: netcdf
     args:
