--- a/.github/workflows/aqua.yml
+++ b/.github/workflows/aqua.yml
@@ -34,4 +34,5 @@ jobs:
           ./download_data_for_tests.sh
       - name: Run tests
         run: |
-          python -m pytest ./tests/test_basic.py        
+          python -m pytest ./tests/test_basic.py
+          python -m pytest ./tests/test_catalog.py               
