--- a/config/ci/regrid.yaml
+++ b/config/ci/regrid.yaml
@@ -29,4 +29,6 @@ source_grids:
       short:
         path: ./AQUA_tests/grids/tco79_grid.nc
         space_coord: ["cell"]
+      long: 
+        space_coords: ["lon", "lat"]
 
