--- a/config/ci/catalog/FESOM/test-pi.yaml
+++ b/config/ci/catalog/FESOM/test-pi.yaml
@@ -23,14 +23,14 @@ sources:
       - ./AQUA_tests/models/FESOM/short/sst.fesom.1986.nc
     description: original 2d output
     driver: netcdf
-  original_3d:
-    args:
-      chunks:
-        nz: 1
-        nz1: 1
-        time: 1
-      urlpath:
-      - ./AQUA_tests/models/FESOM/short/temp.fesom.1985.nc
-      - ./AQUA_tests/models/FESOM/short/temp.fesom.1986.nc
-    description: original 3d output
-    driver: netcdf
+  # original_3d:
+  #   args:
+  #     chunks:
+  #       nz: 1
+  #       nz1: 1
+  #       time: 1
+  #     urlpath:
+  #     - ./AQUA_tests/models/FESOM/short/temp.fesom.1985.nc
+  #     - ./AQUA_tests/models/FESOM/short/temp.fesom.1986.nc
+  #   description: original 3d output
+  #   driver: netcdf
