directly introducing a timmean test

--- a/.github/workflows/aqua.yml
+++ b/.github/workflows/aqua.yml
@@ -37,6 +37,7 @@ jobs:
 
           python -m pytest ./tests/test_basic.py
           python -m pytest ./tests/test_catalog.py 
-          python -m pytest ./tests/test_fldmean.py                
+          python -m pytest ./tests/test_fldmean.py
+          python -m pytest ./tests/test_timmean.py                
           python -m pytest ./tests/test_streaming.py
 
