--- a/.github/workflows/aqua.yml
+++ b/.github/workflows/aqua.yml
@@ -40,4 +40,5 @@ jobs:
           python -m pytest ./tests/test_fldmean.py
           python -m pytest ./tests/test_timmean.py                
           python -m pytest ./tests/test_streaming.py
+          python -m pytest ./tests/test_regrid.py
 
