--- a/config/lumi/regrid.yaml
+++ b/config/lumi/regrid.yaml
@@ -11,7 +11,6 @@ paths:
   grids: /pfs/lustrep1/projappl/project_462000048/davini/aqua/weights
   icon: /pool/data/ICON
 
-
 target_grids:
   r005: r7200x3600
   r010: r3600x1800
@@ -23,12 +22,24 @@ target_grids:
 
 # extra is an extra special cdo command to be applied before generating the weights
 source_grids:
+  FESOM:
+    test-pi:
+      original_2d:
+        path: ../AQUA_tests_short/grids/pi_griddes_nodes_IFS.nc
+        space_coord: ["nod2"]
+        extra: 
+          - -setgrid,../AQUA_tests_short/grids/pi_griddes_nodes_IFS.nc 
+          - -selname,cell_area 
   IFS:
     tco399-orca025:
       default:
         path: /users/padavini/work/tcogrids/tco399_grid.nc
         space_coord: ["value"]
-    tco399-orca025-python:
-      default:
-        path: /users/padavini/work/tcogrids/tco399_grid.nc
-        space_coord: ["value"]
+    test-tco79:
+      original_2d:
+        path: ../AQUA_tests_short/grids/tco79_grid.nc
+        space_coord: ["rgrid"]
+
+
+
+
