--- a/config/levante/catalog/ICON/ngc2009.yaml
+++ b/config/levante/catalog/ICON/ngc2009.yaml
@@ -29,11 +29,11 @@ sources:
   #   args:
   #     consolidated: True
   #     urlpath: /work/bb1153/m300827/ngc2009/R02B09/oce_0-200m_3h_inst_1.zarr
-  # oce_200m_atmgrid_R02B09:
-  #   driver: zarr
-  #   args:
-  #     consolidated: True
-  #     urlpath: /work/bb1153/m300827/ngc2009/R02B09/oce_0-200m_3h_inst_1.zarr
+  oce_200m_atmgrid_R02B09:
+    driver: zarr
+    args:
+      consolidated: False
+      urlpath: /work/bb1153/m300827/ngc2009/R02B09/oce_0-200m_3h_inst_1.zarr
   intake-esm-test:
       driver: intake_esm.esm_datastore
       args:
