--- a/cli/lra/lra_config.yaml
+++ b/cli/lra/lra_config.yaml
@@ -1,29 +1,37 @@
 #This include the option for the regridding
+#This include the option for the regridding
 target:
   resolution: r100
   frequency: mon
-  outdir: /work/bb1153/b382076/LRA
+  outdir: /work/bb1153/b382076/LRAv2
   tmpdir: /scratch/b/b382076
+
+loglevel: WARNING
 
 # all the variable listed here will be processed by the LRA creator
 catalog:
-  ICON:
-    ngc2009:
-      atm_2d_ml_R02B09:
-        vars: ['pr', 'psl', 'rsds', 'rlut', 'rlus', 'tas', 'tauu', 'tauv']
-  FESOM:
-    tco2559-ng5:
-      original_2d:
-        vars: ['sst', 'sss']
   IFS:
-    tco2559-ng5:
-      ICMGG_atm2d:
-        vars: ['tsr', 'ttr', 'tp', 'e', '2t', 'msl',  'hcc', 'lcc', 'mcc', 'nsss', 'ewss']
-      ICMU_atm3d:
-        vars: ['u']
-    tco3999-ng5:
-      ICMGG_atm2d:
-        vars: ['2t']
     tco1279-orca025:
       ICMGG_atm2d:
-        vars: ['tsr', 'ttr', 'tp', 'e', '2t', 'msl',  'hcc', 'lcc', 'mcc', 'nsss', 'ewss']
+        vars: ['2t', 'tprate', 'ci']
+
+  # ICON:
+  #   ngc2009:
+  #     atm_2d_ml_R02B09:
+  #       vars: ['pr', 'psl', 'rsds', 'rlut', 'rlus', 'tas', 'tauu', 'tauv']
+  # FESOM:
+  #   tco2559-ng5:
+  #     original_2d:
+  #       vars: ['sst', 'sss']
+  # IFS:
+  #   tco2559-ng5:
+  #     ICMGG_atm2d:
+  #       vars: ['tsr', 'ttr', 'tp', 'e', '2t', 'msl',  'hcc', 'lcc', 'mcc', 'nsss', 'ewss']
+  #     ICMU_atm3d:
+  #       vars: ['u']
+  #   tco3999-ng5:
+  #     ICMGG_atm2d:
+  #       vars: ['2t']
+  #   tco1279-orca025:
+  #     ICMGG_atm2d:
+  #       vars: ['tsr', 'ttr', 'tp', 'e', '2t', 'msl',  'hcc', 'lcc', 'mcc', 'nsss', 'ewss']
