--- a/config/levante/catalog/IFS/tco2559-ng5.yaml
+++ b/config/levante/catalog/IFS/tco2559-ng5.yaml
@@ -1,31 +1,30 @@
 plugins:
   source:
-    - module: intake_xarray
-    - module: gribscan
-
+  - module: intake_xarray
+  - module: gribscan
 sources:
   ICMGG_atm2d:
     driver: zarr
     args:
-      consolidated: False
+      consolidated: false
       urlpath: reference::/work/bm1235/a270046/cycle2-sync/tco2559-ng5/ICMGGall_update/json.dir/atm2d.json
   ICMU_atm2d:
     driver: zarr
     args:
-      consolidated: False
+      consolidated: false
       urlpath: reference::/work/bm1235/a270046/cycle2-sync/tco2559-ng5/ICMUAall/json.dir/atm2d.json
   ICMU_atm3d:
     driver: zarr
     args:
-      consolidated: False
+      consolidated: false
       urlpath: reference::/work/bm1235/a270046/cycle2-sync/tco2559-ng5/ICMUAall/json.dir/atm3d.json
   interpolated_global:
     driver: zarr
     args:
-      consolidated: False
+      consolidated: false
       compat: override
       combine: nested
-      urlpath: 
+      urlpath:
       - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS4.5/2t/netcdf/tco2559-ng5_pc.json
       - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS4.5/2d/netcdf/tco2559-ng5_pc.json
       - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS4.5/lcc/netcdf/tco2559-ng5_pc.json
@@ -34,10 +33,10 @@ sources:
   interpolated_np:
     driver: zarr
     args:
-      consolidated: False
+      consolidated: false
       compat: override
       combine: nested
-      urlpath: 
+      urlpath:
       - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS4.5/2t/netcdf/tco2559-ng5_np.json
       - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS4.5/2d/netcdf/tco2559-ng5_np.json
       - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS4.5/ci/netcdf/tco2559-ng5_np.json
@@ -47,10 +46,10 @@ sources:
   interpolated_sp:
     driver: zarr
     args:
-      consolidated: False
+      consolidated: false
       compat: override
       combine: nested
-      urlpath: 
+      urlpath:
       - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS4.5/2t/netcdf/tco2559-ng5_sp.json
       - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS4.5/2d/netcdf/tco2559-ng5_sp.json
       - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS4.5/lcc/netcdf/tco2559-ng5_sp.json
@@ -59,22 +58,21 @@ sources:
   lra-r100-day:
     driver: netcdf
     args:
-      urlpath: '/work/bb1153/b382076/LRA/tco2559-ng5/r100/day/*.nc'
+      urlpath: /work/bb1153/b382076/LRA/tco2559-ng5/r100/day/*.nc
       chunks: {}
       xarray_kwargs:
-        decode_times: True
+        decode_times: true
   lra-r100-mon:
     driver: netcdf
     args:
-      urlpath: '/work/bb1153/b382076/LRA/tco2559-ng5/r100/mon/*.nc'
+      urlpath: /work/bb1153/b382076/LRAv2/tco2559-ng5/r100/mon/*.nc
       chunks: {}
       xarray_kwargs:
-        decode_times: True
-  # interpolated_sp_ci:
-  #   driver: zarr
-  #   args:
-  #     consolidated: False
-  #     compat: override
-  #     combine: nested
-  #     urlpath:
-  #     - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS4.5/ci/netcdf/tco2559-ng5_sp.json
+        decode_times: true
+  lra-mon-r100:
+    driver: netcdf
+    args:
+      urlpath: /work/bb1153/b382076/LRAv2/tco2559-ng5/r100/mon/*.nc
+      chunks: {}
+      xarray_kwargs:
+        decode_times: true
