--- a/config/levante/catalog.yaml
+++ b/config/levante/catalog.yaml
@@ -30,7 +30,7 @@ sources:
     args:
       path: "{{CATALOG_DIR}}/catalog/CERES/main.yaml"
   AVISO:
-    description: CERES-EBAF radiation data
+    description: AVISO SSH data
     driver: yaml_file_cat
     args:
       path: "{{CATALOG_DIR}}/catalog/AVISO/main.yaml"
