--- a/config/levante/catalog/ERA5/era5.yaml
+++ b/config/levante/catalog/ERA5/era5.yaml
@@ -20,6 +20,7 @@ sources:
           - uri
           - format
           - short_name
+          - era_id
           dtype:
             initialization_date: str
             validation_date: str
@@ -54,6 +55,7 @@ sources:
           - uri
           - format
           - short_name
+          - era_id
           dtype:
             initialization_date: str
             validation_date: str
@@ -89,6 +91,7 @@ sources:
           - uri
           - format
           - short_name
+          - era_id
           dtype:
             initialization_date: str
             validation_date: str
@@ -121,8 +124,8 @@ sources:
           - uri
           - format
           - short_name
+          - era_id
           # - project
-          # - era_id
           # - dataType
           # - level_type
           # - frequency
