--- a/config/levante/catalog/IFS/tco1279-orca025.yaml
+++ b/config/levante/catalog/IFS/tco1279-orca025.yaml
@@ -6,16 +6,19 @@ plugins:
 sources:
   ICMGG_atm2d:
     driver: zarr
+    description: original 2d output
     args:
       consolidated: False
       urlpath: reference::/work/bm1235/a270046/cycle2-sync/tco1279-orca025/nemo_deep/ICMGGc2/json.dir/atm2d.json
   ICMU_atm2d:
     driver: zarr
+    description: original 2d output (lnsp)
     args:
       consolidated: False
       urlpath: reference::/work/bm1235/a270046/cycle2-sync/tco1279-orca025/nemo_deep/ICMUAc2/json.dir/atm2d.json
   ICMU_atm3d:
     driver: zarr
+    description: original 3d output
     args:
       consolidated: False
       urlpath: reference::/work/bm1235/a270046/cycle2-sync/tco1279-orca025/nemo_deep/ICMUAc2/json.dir/atm3d.json
@@ -26,6 +29,7 @@ sources:
   #     chunks: {}
   lra-r100-mon:
     driver: netcdf
+    description: LRA monthly data 1x1 deg regular grid
     args:
       urlpath: '/work/bb1153/b382076/LRA/tco1279-orca025/r100/mon/*.nc'
       chunks: {}
