--- a/config/levante/catalog/IFS/tco3999-ng5.yaml
+++ b/config/levante/catalog/IFS/tco3999-ng5.yaml
@@ -6,21 +6,25 @@ plugins:
 sources:
   ICMGG_atm2d:
     driver: zarr
+    description: original 2d output
     args:
       consolidated: False
       urlpath: reference::/work/bm1235/a270046/cycle2-sync/tco3999-ng5/ICMGGc2/json.dir/atm2d.json
   ICMU_atm2d:
     driver: zarr
+    description: original 2d output (lnsp)
     args:
       consolidated: False
       urlpath: reference::/work/bm1235/a270046/cycle2-sync/tco3999-ng5/ICMUAc2/json.dir/atm2d.json
   ICMU_atm3d:
     driver: zarr
+    description: original 3d output
     args:
       consolidated: False
       urlpath: reference::/work/bm1235/a270046/cycle2-sync/tco3999-ng5/ICMUAc2/json.dir/atm3d.json
   interpolated_global:
     driver: zarr
+    description: NN interpolation to 5400x2700 grid (lon=[-180,180], lat=[-90, 90])
     args:
       consolidated: False
       compat: override
@@ -31,39 +35,39 @@ sources:
       - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/lcc/netcdf/tco3999-ng5_pc.json
       - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/10u/netcdf/tco3999-ng5_pc.json
       - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/10v/netcdf/tco3999-ng5_pc.json
-  interpolated_np:
-    driver: zarr
-    args:
-      consolidated: False
-      compat: override
-      combine: nested
-      urlpath: 
-      - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/2t/netcdf/tco3999-ng5_np.json
-      - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/2d/netcdf/tco3999-ng5_np.json
-      - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/ci/netcdf/tco3999-ng5_np.json
-      - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/lcc/netcdf/tco3999-ng5_np.json
-      - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/10u/netcdf/tco3999-ng5_np.json
-      - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/10v/netcdf/tco3999-ng5_np.json
-  interpolated_sp:
-    driver: zarr
-    args:
-      consolidated: False
-      compat: override
-      combine: nested
-      urlpath: 
-      - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/2t/netcdf/tco3999-ng5_sp.json
-      - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/2d/netcdf/tco3999-ng5_sp.json
-      - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/lcc/netcdf/tco3999-ng5_sp.json
-      - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/10u/netcdf/tco3999-ng5_sp.json
-      - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/10v/netcdf/tco3999-ng5_sp.json
-  interpolated_sp_ci:
-    driver: zarr
-    args:
-      consolidated: False
-      compat: override
-      combine: nested
-      urlpath: 
-      - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/ci/netcdf/tco3999-ng5_sp.json
+  # interpolated_np:
+  #   driver: zarr
+  #   args:
+  #     consolidated: False
+  #     compat: override
+  #     combine: nested
+  #     urlpath: 
+  #     - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/2t/netcdf/tco3999-ng5_np.json
+  #     - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/2d/netcdf/tco3999-ng5_np.json
+  #     - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/ci/netcdf/tco3999-ng5_np.json
+  #     - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/lcc/netcdf/tco3999-ng5_np.json
+  #     - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/10u/netcdf/tco3999-ng5_np.json
+  #     - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/10v/netcdf/tco3999-ng5_np.json
+  # interpolated_sp:
+  #   driver: zarr
+  #   args:
+  #     consolidated: False
+  #     compat: override
+  #     combine: nested
+  #     urlpath: 
+  #     - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/2t/netcdf/tco3999-ng5_sp.json
+  #     - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/2d/netcdf/tco3999-ng5_sp.json
+  #     - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/lcc/netcdf/tco3999-ng5_sp.json
+  #     - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/10u/netcdf/tco3999-ng5_sp.json
+  #     - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/10v/netcdf/tco3999-ng5_sp.json
+  # interpolated_sp_ci:
+  #   driver: zarr
+  #   args:
+  #     consolidated: False
+  #     compat: override
+  #     combine: nested
+  #     urlpath: 
+  #     - reference::/work/ab0995/a270088/NextGems_public/appetizer/IFS2.5/ci/netcdf/tco3999-ng5_sp.json
   # lra-r100-day:
   #   driver: netcdf
   #   args:
@@ -71,6 +75,7 @@ sources:
   #     chunks: {}
   lra-r100-mon:
     driver: netcdf
+    description: LRA monthly data 1x1 deg regular grid
     args:
       urlpath: '/work/bb1153/b382076/LRA/tco3999-ng5/r100/mon/*.nc'
       chunks: {}
