--- a/config/levante/regrid.yaml
+++ b/config/levante/regrid.yaml
@@ -24,27 +24,57 @@ target_grids:
 source_grids:
   IFS:
     tco3999-ng5:
-      default:
+      ICMGG_atm2d:
         path: /work/bm1235/a270046/cycle2-sync/tcogrids/2.8km/tcogrids/tco3999_grid.nc
         space_coord: ["value"]
+      ICMU_atm2d:
+        path: /work/bm1235/a270046/cycle2-sync/tcogrids/2.8km/tcogrids/tco3999_grid.nc
+        space_coord: ["value"]
+      ICMU_atm3d:
+        path: /work/bm1235/a270046/cycle2-sync/tcogrids/2.8km/tcogrids/tco3999_grid.nc
+        space_coord: ["value"]
+      interpolated_global:
+        path: /work/bb1153/b382075/nextgems/grids/ifs_interpolated5400x2700.nc
+        space_coord: ["lon", "lat"]
+      lra-r100-day:
+        space_coord: ["lon", "lat"]
+      lra-r100-mon:
+        space_coord: ["lon", "lat"]
+  
     tco2559-ng5:
-      default:
+      ICMGG_atm2d:
         path: /work/bm1235/a270046/cycle2-sync/tcogrids/4km/tcogrids/tco2559_grid.nc
         space_coord: ["value"]
-      ICMGG_atm2d:
+      ICMU_atm2d:
         path: /work/bm1235/a270046/cycle2-sync/tcogrids/4km/tcogrids/tco2559_grid.nc
         space_coord: ["value"]
       ICMU_atm3d:
         path: /work/bm1235/a270046/cycle2-sync/tcogrids/4km/tcogrids/tco2559_grid.nc
         space_coord: ["value"]
+      interpolated_global:
+        path: /work/bb1153/b382075/nextgems/grids/ifs_interpolated5400x2700.nc
+        space_coord: ["lon", "lat"]
+      lra-r100-day:
+        space_coord: ["lon", "lat"]
+      lra-r100-mon:
+        space_coord: ["lon", "lat"]
+  
     tco1279-orca025:
-      default: 
+      ICMGG_atm2d: 
         path: /work/bm1235/a270046/cycle2-sync/tcogrids/9km/tcogrids/tco1279_grid.nc
         space_coord: ["value"]
-    test-tco2559:
-      default:
-        path: /work/bm1235/a270046/cycle2-sync/tcogrids/4km/tcogrids/tco2559_grid.nc
+      ICMU_atm2d: 
+        path: /work/bm1235/a270046/cycle2-sync/tcogrids/9km/tcogrids/tco1279_grid.nc
         space_coord: ["value"]
+      ICMU_atm3d: 
+        path: /work/bm1235/a270046/cycle2-sync/tcogrids/9km/tcogrids/tco1279_grid.nc
+        space_coord: ["value"]
+      lra-r100-day:
+        space_coord: ["lon", "lat"]
+      lra-r100-mon:
+        space_coord: ["lon", "lat"]
+
+    test-tco2559:
       ICMGG_atm2d:
         path: /work/bm1235/a270046/cycle2-sync/tcogrids/4km/tcogrids/tco2559_grid.nc
         space_coord: ["value"]
@@ -57,12 +87,29 @@ source_grids:
       short:
         path:  /work/bb1153/b382075/aqua/test_datasets/AQUA_tests/grids/tco79_grid.nc
         space_coord: ["cell"]
+
   ICON:
     ngc2009:
-      default: 
+      atm_2d_ml: 
         path: /pool/data/ICON/grids/public/mpim/0015/icon_grid_0015_R02B09_G.nc
         extra: "-selname,cell_index" 
         space_coord: ["cell"]
+      atm_2d_ml_R02B09: 
+        path: /pool/data/ICON/grids/public/mpim/0015/icon_grid_0015_R02B09_G.nc
+        extra: "-selname,cell_index" 
+        space_coord: ["cell"]
+      atm_2d_ml_R02B08: 
+        path: /pool/data/ICON/grids/public/mpim/0033/icon_grid_0033_R02B08_G.nc
+        extra: "-selname,cell_index" 
+        space_coord: ["cell"]
+      oce_200m_atmgrid_R02B09: 
+        path: /pool/data/ICON/grids/public/mpim/0015/icon_grid_0015_R02B09_G.nc
+        extra: "-selname,cell_index" 
+        space_coord: ["cell"]
+      lra-r100-mon: 
+        space_coord: ["lon", "lat"]
+      lra-r100-day: 
+        space_coord: ["lon", "lat"]
       intake-esm-test: 
         path: /pool/data/ICON/grids/public/mpim/0015/icon_grid_0015_R02B09_G.nc
         extra: "-selname,cell_index" 
@@ -71,6 +118,7 @@ source_grids:
       default:
         path: /work/bb1153/b382075/nextgems/grids/icon_hpx{zoom}.nc
         space_coord: ["pix"]
+  
   FESOM:
     tco3999-ng5:  
       default:
