--- a/config/levante/catalog/FESOM/tco3999-ng5.yaml
+++ b/config/levante/catalog/FESOM/tco3999-ng5.yaml
@@ -3,20 +3,20 @@ plugins:
   - module: intake_xarray
   - module: gribscan
 sources:
-  elem_grid:
-    args:
-      urlpath: /work/bm1235/a270046/meshes/NG5_griddes_elems_IFS.nc
-    driver: netcdf
-  node_grid:
-    args:
-      urlpath: /work/bm1235/a270046/meshes/NG5_griddes_nodes_IFS.nc
-    driver: netcdf
-  np:
-    args:
-      consolidated: false
-      urlpath: reference::/home/m/m300827/nextgems/C2_hackathon_prep/tco3999-ng5_np.json
-    description: nearest-neighbor interpolation to lat-lon grid
-    driver: zarr
+  # elem_grid:
+  #   args:
+  #     urlpath: /work/bm1235/a270046/meshes/NG5_griddes_elems_IFS.nc
+  #   driver: netcdf
+  # node_grid:
+  #   args:
+  #     urlpath: /work/bm1235/a270046/meshes/NG5_griddes_nodes_IFS.nc
+  #   driver: netcdf
+  # np:
+  #   args:
+  #     consolidated: false
+  #     urlpath: reference::/home/m/m300827/nextgems/C2_hackathon_prep/tco3999-ng5_np.json
+  #   description: nearest-neighbor interpolation to lat-lon grid
+  #   driver: zarr
   interpolated_global2d:
     driver: zarr
     args:
@@ -43,22 +43,22 @@ sources:
       urlpath: 
       - reference::/work/ab0995/a270088/NextGems_public/FESOM_interpolated/tco3999-ng5/u/u.fesom.json
       - reference::/work/ab0995/a270088/NextGems_public/FESOM_interpolated/tco3999-ng5/u/v.fesom.json 
-  interpolated_np:
-    driver: zarr
-    args:
-      consolidated: False
-      compat: override
-      combine: nested
-      urlpath: 
-      - reference::/work/ab0995/a270088/NextGems_public/FESOM_interpolated/tco3999-ng5/m_ice_np/m_ice.fesom.json
-  interpolated_sp:
-    driver: zarr
-    args:
-      consolidated: False
-      compat: override
-      combine: nested
-      urlpath: 
-      - reference::/work/ab0995/a270088/NextGems_public/FESOM_interpolated/tco3999-ng5/m_ice_sp/m_ice.fesom.json
+  # interpolated_np:
+  #   driver: zarr
+  #   args:
+  #     consolidated: False
+  #     compat: override
+  #     combine: nested
+  #     urlpath: 
+  #     - reference::/work/ab0995/a270088/NextGems_public/FESOM_interpolated/tco3999-ng5/m_ice_np/m_ice.fesom.json
+  # interpolated_sp:
+  #   driver: zarr
+  #   args:
+  #     consolidated: False
+  #     compat: override
+  #     combine: nested
+  #     urlpath: 
+  #     - reference::/work/ab0995/a270088/NextGems_public/FESOM_interpolated/tco3999-ng5/m_ice_sp/m_ice.fesom.json
   original_2d:
     args:
       chunks:
