--- a/config/levante/catalog/FESOM/main.yaml
+++ b/config/levante/catalog/FESOM/main.yaml
@@ -9,11 +9,11 @@ sources:
     driver: yaml_file_cat
     args:
         path: "{{CATALOG_DIR}}/tco2559-ng5.yaml"
-  test-ng5:
-    description: 5km experiment, coupuled with IFS
-    driver: yaml_file_cat
-    args:
-        path: "{{CATALOG_DIR}}/test-ng5.yaml"
+  # test-ng5:
+  #   description: 5km experiment, coupuled with IFS
+  #   driver: yaml_file_cat
+  #   args:
+  #       path: "{{CATALOG_DIR}}/test-ng5.yaml"
   test-pi:
     description: test data
     driver: yaml_file_cat
