--- a/config/fixes.yaml
+++ b/config/fixes.yaml
@@ -203,6 +203,22 @@ models:
                         src_units: degC
                         grib: true
                         units: degC # Override units from grib tables
+            original_2d:
+                data_model: false
+                vars:
+                    ci:
+                        derived: a_ice
+                        grib: true
+                        units: '%'
+                    sst: 
+                        derived: sst
+                        src_units: degC
+                        grib: true
+                        units: K
+                    sos:
+                        derived: sss
+                        grib: true
+                        units: psu
 
     MSWEP:
         default:
