--- a/cli/lra/lra_config.yaml
+++ b/cli/lra/lra_config.yaml
@@ -7,7 +7,7 @@ target:
   tmpdir: /scratch/b/b382076
 
 configdir: '../../config/'
-loglevel: WARNING
+loglevel: INFO
 
 # all the variable listed here will be processed by the LRA creator
 catalog:
@@ -15,13 +15,21 @@ catalog:
     tco1279-orca025:
       ICMGG_atm2d:
         vars: ['ci', 'tprate', '2t', 'erate', 'mslhfl', 'msshfl', 'msnsrf', 'msntrf', 'mtntrf', 'nsss', 'ewss', 'msl', 'hcc', 'lcc', 'mcc']
+      ICMU_atm3d:
+        vars: ['t', 'u', 'v', 'q']
     tco2559-ng5:
       ICMGG_atm2d:
         vars: ['ci', 'tprate', '2t', 'erate', 'mslhfl', 'msshfl', 'msnsrf', 'msntrf', 'mtntrf', 'nsss', 'ewss', 'msl', 'hcc', 'lcc', 'mcc']
+      ICMU_atm3d:
+        vars: ['t', 'u', 'v', 'q']
   FESOM:
     tco2559-ng5:
       original_2d:
-        vars: ['sst', 'sss', 'a_ice']
+        vars: ['sos', 'sst', 'zos', 'ci', 'sithick']
+  ICON:
+    ngc2009:
+      atm_2d_ml_R02B09:
+        vars: ['ci', 'tprate', '2t', 'mslhfl', 'msshfl', 'msnsrf', 'msntrf', 'mtntrf', 'msl']
 
   # ICON:
   #   ngc2009:
