--- a/config/fixes.yaml
+++ b/config/fixes.yaml
@@ -205,6 +205,11 @@ models:
                         units: degC # Override units from grib tables
             original_2d:
                 data_model: false
+                delete:  # variables to drop at the end
+                    - a_ice
+                    - m_ice
+                    - sss
+                    - ssh
                 vars:
                     ci:
                         derived: a_ice
@@ -219,6 +224,12 @@ models:
                         derived: sss
                         grib: true
                         units: psu
+                    sithick:
+                        derived: m_ice
+                        grib: true
+                    zos:
+                        derived: ssh
+                        grib: true
 
     MSWEP:
         default:
