--- a/config/levante/catalog/FESOM/tco2559-ng5.yaml
+++ b/config/levante/catalog/FESOM/tco2559-ng5.yaml
@@ -384,7 +384,7 @@ sources:
   lra-r100-mon:
     driver: netcdf
     args:
-      urlpath: /work/bb1153/b382076/LRAv2/FESOM/tco2559-ng5/r100/mon/tco2559-ng5_r100_mon_????.nc
+      urlpath: /work/bb1153/b382076/LRAv2/FESOM/tco2559-ng5/r100/mon/*tco2559-ng5_r100_mon_????.nc
       chunks: {}
       xarray_kwargs:
         decode_times: true
