--- a/diagnostics/ecmean/config.yml
+++ b/diagnostics/ecmean/config.yml
@@ -1,8 +1,8 @@
 # Choice of interface
-interface: IFS+NEMO
+interface: IFS+FESOM
 # Choice of model name. It is printed in the output table
 model:
-   name: IFS+NEMO
+   name: IFS+FESOM
 
 dirs:
    exp: /home/b/b382076/work/datasets/IFS-tco2559-ng5
@@ -11,8 +11,9 @@ dirs:
 
 global:
   atm_vars: [tas, psl, pr, evspsbl, pme, cll, clm, clh,
-            rsnt, rlnt, net_toa]
-  oce_vars: [sos]
+            pr_oce, pme_oce, pr_land, pme_land,
+            rsnt, rlnt, net_toa, rsns, rlns, hfss, hfls, net_sfc_nosn]
+  oce_vars: [tos, sos]
   ice_vars: [siconc]
   tab_vars: []
   regions: ['Global', 'North Midlat', 'Tropical', 'South Midlat']
@@ -20,13 +21,13 @@ global:
 
 PI:
   2d_vars:
-    field: [tas, pr,  psl]
+    field: [tas, pr, psl]
   3d_vars:
-    field: []
+    field: [ta, ua, va, hus]
   oce_vars:
-    field: [sos]
+    field: [tos, sos]
   ice_vars:
-    field: [siconc]
+    field: []
   regions: ['Global', 'North Midlat', 'Tropical', 'South Midlat']
   seasons: ['ALL', 'DJF', 'JJA']
   resolution: r360x180
