--- a/config/levante/regrid.yaml
+++ b/config/levante/regrid.yaml
@@ -15,6 +15,7 @@ target_grids:
   r005: r7200x3600
   r010: r3600x1800
   r020: r1800x900
+  r025: r1440x720
   r050: r720x360
   r100: r360x180
   r200: r180x90
@@ -213,6 +214,16 @@ source_grids:
     ssh-L4:
       default:
         space_coord: ["longitude", "latitude"]
+  
+  PHC3:
+    phc3:
+      default:
+        space_coord: ["lon", "lat"]
+  
+  WOA18:
+    woa18_2005_2017:
+      default:
+        space_coord: ["lon", "lat"]
 
   CERES:
     ebaf-toa42:
