change unit 'frac' into '1' in fixes.yaml, since the reader does not like that (unit not recognized)

--- a/config/fixes.yaml
+++ b/config/fixes.yaml
@@ -237,7 +237,7 @@ models:
                 vars:
                     ci:
                         derived: a_ice
-                        src_units: frac
+                        src_units: "1"
                         grib: true
                         units: '%'
                     sst: 
