--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,10 +1,10 @@
 # machine dependent configuration file for AQUA
 # so far nothing is really strict
-machine: levante
+machine: ci
 
 reader: 
   catalog: '{configdir}/{machine}/catalog.yaml'
   regrid: '{configdir}/{machine}/regrid.yaml'
-  fixer: '{configdir}/fixes.yaml'
+  fixer: '{configdir}/fixes'
 
 
