--- a/config/levante/catalog.yaml
+++ b/config/levante/catalog.yaml
@@ -34,3 +34,8 @@ sources:
     driver: yaml_file_cat
     args:
       path: "{{CATALOG_DIR}}/catalog/AVISO/main.yaml"
+  OSI-SAF:
+    description: OSI-SAF sea-ice data
+    driver: yaml_file_cat
+    args:
+      path: "{{CATALOG_DIR}}/catalog/OSI-SAF/main.yaml"
