--- a/environment.yml
+++ b/environment.yml
@@ -26,6 +26,9 @@ dependencies:
 # these below are only required for running notebooks
   - ipykernel
   - healpy
+# these below are only required for documentation
+  - sphinx
+  - sphinx-rtd-theme
 # these are pip-based since it provides more recent versions or packages unavailable on conda-forge
   - pip
   - pip:
