changed levante paths for old CERES data

--- a/config/levante/catalog/CERES/ebaf-sfc41.yaml
+++ b/config/levante/catalog/CERES/ebaf-sfc41.yaml
@@ -7,7 +7,7 @@ sources:
     description: CERES EBAF SFC Ed4.1 from 2002 to 2022
     driver: netcdf
     args:
-      urlpath: '/pool/data/ICDC/atmosphere/ceres_ebaf/DATA_OLD/CERES_EBAF-Surface_Ed4.1_Subset_200003-202203.nc'
+      urlpath: '/pool/data/ICDC/atmosphere/ceres_ebaf/DATA_OLD/CERES_EBAF-Surface_Ed4.1_Subset_200003-202203.nc' # link to old data set
       chunks: {}
       xarray_kwargs:
         decode_times: True
