IFS, tco79-eORCA1 added to the catalogue

--- a/config/lumi/catalog/IFS/main.yaml
+++ b/config/lumi/catalog/IFS/main.yaml
@@ -3,4 +3,9 @@ sources:
     description: 5km experiment, coupuled with IFS
     driver: yaml_file_cat
     args:
-        path: "{{CATALOG_DIR}}/test-tco79.yaml"
+      path: '{{CATALOG_DIR}}/test-tco79.yaml'
+  tco79-eORCA1:
+    description: tco79-eORCA1 data
+    driver: yaml_file_cat
+    args:
+      path: '{{CATALOG_DIR}}/tco79-eORCA1.yaml'
