--- a/config/lumi/regrid.yaml
+++ b/config/lumi/regrid.yaml
@@ -35,6 +35,10 @@ source_grids:
       default:
         path: /pfs/lustrep3/projappl/project_465000454/padavini/aqua/grids/tco399_grid.nc
         space_coord: ["value"]
+    tco79-eORCA1:
+      ICMGG_atm2d:
+        path: /pfs/lustrep3/scratch/project_465000454/AQUA-workflow/tco_grids/tco79_grid.nc
+        space_coord: ["value"]
     test-tco79:
       original_2d:
         path: ../AQUA_tests_short/grids/tco79_grid.nc
