--- a/config/machines/lumi/regrid.yaml
+++ b/config/machines/lumi/regrid.yaml
@@ -7,8 +7,8 @@ areas:
    src_template: cell_area_{model}_{exp}_{source}.nc
    dst_template: cell_area_{grid}.nc
 
-paths:
-  grids: /pfs/lustrep3/projappl/project_465000454/padavini/aqua/weights
+cdo-paths:
+  download: /pfs/lustrep3/projappl/project_465000454/padavini/aqua/weights
   icon: /pool/data/ICON
 
 target_grids:
