--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ dependencies = [
     "sparse",
     "xarray",
     "smmregrid@git+https://github.com/jhardenberg/smmregrid"
+    "one_pass@git+https://oauth2:-nnxqtXxyrs3LrJubtH1@earth.bsc.es/gitlab/digital-twins/de_340/one_pass.git"
 ]
 
 [project.optional-dependencies]
