--- a/environment.yml
+++ b/environment.yml
@@ -33,6 +33,6 @@ dependencies:
     - docker
     - gribscan
     # get OPA
-    - pip install git+https://oauth2:-nnxqtXxyrs3LrJubtH1@earth.bsc.es/gitlab/digital-twins/de_340/one_pass.git
+    - git+https://oauth2:-nnxqtXxyrs3LrJubtH1@earth.bsc.es/gitlab/digital-twins/de_340/one_pass.git
     # pip install -e of AQUA itself (this will bring in also smmregrid)
     - -e .
