uptaded test dataset

--- a/config/ci/regrid.yaml
+++ b/config/ci/regrid.yaml
@@ -29,7 +29,14 @@ source_grids:
         space_coord: ["nod2"]
         extra: 
           - -setgrid,./AQUA_tests/grids/pi_griddes_nodes_IFS.nc 
-          - -selname,cell_area 
+          - -selname,cell_area
+      original_3d:
+          path: ./AQUA_tests/grids/pi_fesom_mask.nc
+          space_coord: ["nod2"]
+          vertcoord: nz1
+          extra: 
+            - -setgrid,./AQUA_tests/grids/pi_griddes_nodes_IFS.nc 
+
   IFS:
     test-tco79:
       short:
