--- a/environment.yml
+++ b/environment.yml
@@ -6,14 +6,16 @@
 name: aqua
 channels:
   - conda-forge
+  - numba
 # please note that some of these dependencies are made explicit on purpose, but are not directly required by conda/mamba
 dependencies:
   - python>=3.9,<3.11
   - libnetcdf<=4.8.1 
+  - netcdf4
   - xarray
   - dask
   - numpy
-  - netcdf4
+  - numba
   - ecCodes      
   - matplotlib
   - cartopy
@@ -32,7 +34,8 @@ dependencies:
     - sparse
     - docker
     - gribscan
+    - smmregrid
     # get OPA
     - git+https://oauth2:-nnxqtXxyrs3LrJubtH1@earth.bsc.es/gitlab/digital-twins/de_340/one_pass.git
-    # pip install -e of AQUA itself (this will bring in also smmregrid)
+    # pip install -e of AQUA itself
     - -e .
