--- a/.github/workflows/aqua.yml
+++ b/.github/workflows/aqua.yml
@@ -27,6 +27,9 @@ jobs:
         with:
           environment-file: environment.yml
           cache-downloads: true
+          cache-downloads: true
+          channels: conda-forge,numba
+          channel-priority: flexible
           extra-specs: |
               python=${{ matrix.python-version }}
       - name: Download and setup tests
@@ -37,8 +40,9 @@ jobs:
 
           python -m pytest ./tests/test_basic.py
           python -m pytest ./tests/test_catalog.py 
-          python -m pytest ./tests/test_fldmean.py
-          python -m pytest ./tests/test_timmean.py                
+          python -m pytest ./tests/test_fixer.py
+          python -m pytest ./tests/test_fldmean.py   
+          python -m pytest ./tests/test_regrid.py             
           python -m pytest ./tests/test_streaming.py
-          python -m pytest ./tests/test_regrid.py
+          python -m pytest ./tests/test_timmean.py
 
