--- a/.github/workflows/aqua.yml
+++ b/.github/workflows/aqua.yml
@@ -37,8 +37,9 @@ jobs:
 
           python -m pytest ./tests/test_basic.py
           python -m pytest ./tests/test_catalog.py 
-          python -m pytest ./tests/test_fldmean.py
-          python -m pytest ./tests/test_timmean.py                
+          python -m pytest ./tests/test_fixer.py
+          python -m pytest ./tests/test_fldmean.py   
+          python -m pytest ./tests/test_regrid.py             
           python -m pytest ./tests/test_streaming.py
-          python -m pytest ./tests/test_regrid.py
+          python -m pytest ./tests/test_timmean.py
 
