--- a/diagnostics/dummy-diagnostic/env-dummy.yml
+++ b/diagnostics/dummy-diagnostic/env-dummy.yml
@@ -7,14 +7,16 @@
 name: dummy-diagnostic
 channels:
   - conda-forge
+  - numba
 # please note that some of these dependencies are made explicit on purpose, but are not directly required by conda/mamba
 dependencies:
   - python>=3.9,<3.11
-  - libnetcdf<=4.8.1 
+  - libnetcdf<=4.8.1
+  - netcdf4
   - xarray
   - dask
   - numpy
-  - netcdf4
+  - numba
   - ecCodes      
   - matplotlib
   - cartopy
@@ -35,9 +37,10 @@ dependencies:
     - sparse
     - docker
     - gribscan
+    - smmregrid
     # get OPA
     - git+https://oauth2:-nnxqtXxyrs3LrJubtH1@earth.bsc.es/gitlab/digital-twins/de_340/one_pass.git
-    # pip install -e of AQUA itself (this will bring in also smmregrid)
+    # pip install -e of AQUA itself
     - -e ./../../ # this is the path to the AQUA root folder
     # these below are only required for the dummy diagnostic
     # - dummy-pip-package
