--- a/config/machines/levante/regrid.yaml
+++ b/config/machines/levante/regrid.yaml
@@ -238,6 +238,9 @@ source_grids:
     ebaf-sfc41:
       default:
         space_coord: ["lon", "lat"]
+    ebaf-sfc42:
+      default:
+        space_coord: ["lon", "lat"]
     syn-toa41:
       default:
         space_coord: ["lon", "lat"]
