updating the dummy diag

--- a/.github/workflows/dummy-diagnostic.yml
+++ b/.github/workflows/dummy-diagnostic.yml
@@ -50,4 +50,4 @@ jobs:
 
       - name: Run dummy-diagnostic tests
         run: |
-          python -m pytest ./tests/dummy-diagnostic/test_dummy-diagnostic.py
+          python -m pytest -m dummy
