--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,7 @@
 [pytest]
 markers =
-    aqua: mark test as aqau framework 
+    aqua: mark test as AQUA framework 
     slow: tests which are slow
-    dummy-diagonistc: mark test for dummy diagnostic
+    dummy: mark test for dummy diagnostic
 testpaths =
     tests
