Add NextGEMS Cycle 3 test runs on HEALPix to catalog

--- a/config/machines/levante/catalog/ICON/main.yaml
+++ b/config/machines/levante/catalog/ICON/main.yaml
@@ -4,12 +4,17 @@ sources:
     driver: yaml_file_cat
     args:
         path: "{{CATALOG_DIR}}/ngc2009.yaml"
-
-  hpx:
-    description: Some Healpix data
+  ngc3026:
+    description: 5km coupled run, intermediate ICON nextGEMS C23run
     driver: yaml_file_cat
     args:
-        path: /home/m/m300827/healpix/ngc3002.yaml
+        path: "{{CATALOG_DIR}}/ngc3026.yaml"
+  ngc3028:
+    description: 5km coupled run, intermediate ICON nextGEMS C3 run
+    driver: yaml_file_cat
+    args:
+        path: "{{CATALOG_DIR}}/ngc3028.yaml"
+
 
   # grids:
   #   description: ICON grids
