--- a/config/config.yaml
+++ b/config/config.yaml
@@ -8,5 +8,5 @@ reader:
   fixer: '{configdir}/fixes'
 
 cdo:
-  levante: /sw/spack-levante/cdo-2.0.6-jkuh4i/bin/cdo
+  levante: /home/m/m214003/local/bin/cdo  # CDO 2.2.0 by Uwe Schulzweida (HEALPix support)
   lumi: /scratch/project_465000454/devaraju/SW/LUMI-22.08/C/python-xarray/bin/cdo
