--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
 #gsv_interface
 [submodule "gsv_interface"]
 	path = gsv_interface
-	url = git+https://oauth2:NrMi_dshtmNeaWy9F3sz@earth.bsc.es/gitlab/digital-twins/de_340/gsv_interface.git
+	url = https://oauth2:NrMi_dshtmNeaWy9F3sz@earth.bsc.es/gitlab/digital-twins/de_340/gsv_interface.git
 	branch=v0.2.1
