--- a/environment.yml
+++ b/environment.yml
@@ -37,6 +37,6 @@ dependencies:
     - smmregrid
     # get OPA
     - git+https://oauth2:-nnxqtXxyrs3LrJubtH1@earth.bsc.es/gitlab/digital-twins/de_340/one_pass.git
-    # - git+https://oauth2:NrMi_dshtmNeaWy9F3sz@earth.bsc.es/gitlab/digital-twins/de_340/gsv_interface.git
+    - git+https://oauth2:NrMi_dshtmNeaWy9F3sz@earth.bsc.es/gitlab/digital-twins/de_340/gsv_interface.git@add_packaging
     # pip install -e of AQUA itself
     - -e .
