--- a/.github/workflows/aqua-pip.yml
+++ b/.github/workflows/aqua-pip.yml
@@ -43,11 +43,5 @@ jobs:
           ./download_data_for_tests.sh
       - name: Run tests
         run: |
-
-          python -m pytest ./tests/test_basic.py
-          python -m pytest ./tests/test_catalog.py
-          python -m pytest ./tests/test_fldmean.py
-          python -m pytest ./tests/test_timmean.py
-          python -m pytest ./tests/test_streaming.py
-          python -m pytest ./tests/test_regrid.py
+          pytest -m "aqua or slow"
 
