env adapted to slurm module requests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ classifiers = [
 dependencies = [
     "cfgrib",
     "dask",
+    "dask_jobqueue",
     "docker",
     "gribscan",
     "ecCodes",
